# kek

./: CLAUDE.md  Containerfile  README.md  api.py  hymt_translator.py  main.py  nllb_translator.py  pyproject.toml  terms.py  terms.txt  test_api.py  translator.py
docs/: alternative-models.md  rest-api-frameworks.md
docs/adr/: 001-model-size-constraint.md  002-litestar-framework.md
scripts/: list-py-lines.sh
