[project]
name = "kek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers",
    "torch",
    "accelerate",
    "sentencepiece",
    "typer",
    "litestar[standard]",
]

[project.scripts]
kek-api = "api:run"
